--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unocss/reset": "^0.39.3",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.7.4",
     "eslint": "^8.18.0",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.2",
