--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "fuse.js": "^6.6.2",
     "timezones.json": "^1.6.1",
     "vue": "^3.2.36"
